--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,12 +1,15 @@
 /* Setup the background of my website */
+
+/* background-color: blueviolet; */
 body{
     /* background-image: url("Assets/Images/MilkyWay.jpg"); */
     /* background-image: url("Assets/Images/mural.jpg"); */
-    background-image: url("Assets/Images/aia.jpg");
+    background-image: url("../Assets/Images/aia.jpg");
     background-repeat: yes; 
     background-size: cover; 
     background-position: center;
     font-family: 'Kalam', cursive;
+    width: 105%
 }
 
 /* Resume CSS */
@@ -61,7 +64,7 @@ li.borderless {
     background-color: #990099;
 }
 
-#deeann {
+.deeann {
     font-size: xxx-large;
     text-align: center;
 }
@@ -119,6 +122,37 @@ div{
     left: 25px;
     }
 
+/* .center {
+    text-align: center;
+} */
+.anchor{
+    text-align: center;
+}
+
+.img-fix {
+    padding-top: 25px;
+    text-align: center;
+}
+
+.btnPortfolio {
+    background-color: white;
+    color: #990099;
+    font-size: x-small;
+}
+
+.button {
+    display: block;
+    width: 115px;
+    height: 25px;
+    background: white;
+    /* padding: 10px; */
+    text-align: center;
+    border-radius: 5px;
+    color: #990099;
+    /* font-weight: bold; */
+    line-height: 25px;
+}
+
   /* Adjust the sizes of the images on the portfolio page */
 #portfolio  img {
     width: 100%;
@@ -126,22 +160,23 @@ div{
 
 /* Adjust the height and width of the image on the index page and location */
 .img-responsive{
-      float: left;
-      padding-top: 25px;
-      padding-right: 15px;;
-      width: 235px;
+      
+      
+      /* padding-right: 15px;; */
+      width: 220px;
       height: 275px;
   }
   
-.container .btn:hover {
+/* .container .btn:hover {
     background-color: black;
-  }
+  } */
 
   /* Setup position of first image */
 .box1{
     position: relative;
     top: 25px;
     bottom: 50px;
+
 }
 
  /* Setup position of second image */
@@ -179,26 +214,26 @@ div{
     text-align: center;
     width: 100%;
     bottom: 15px;
-    background-color: blueviolet;
+    background-color: #990099;
     color:white;
     font-size: small;
 }
 
- .box1 #anchor1{
+ .box1 #anchor1 {
     text-align: center;
-    color: white;
-    width: 100%;
+    /* color: white; */
+    /* width: 100%; */
     bottom: -15px;
-    background-color: blueviolet;
+    /* background-color: #990099; */
     font-size: small;
 }
 
 .box1 #anchor2{
     text-align: center;
-    color: white;
-    width: 100%;
+    /* color: white; */
+    /* width: 100%; */
     bottom: -155px;
-    background-color: blueviolet;
+    /* background-color: #990099; */
     font-size: small;
 }
 
@@ -208,7 +243,7 @@ div{
     text-align: center;
     width: 100%;
     bottom: 15px;
-    background-color: blueviolet;
+    background-color: #990099;
     color:white;
     font-size: small;
 }
@@ -218,7 +253,7 @@ div{
     color: white;
     width: 100%;
     bottom: -15px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -227,7 +262,7 @@ div{
     color: white;
     width: 100%;
     bottom: -155px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 /* Setup text positioning of third image */
@@ -236,7 +271,7 @@ div{
     text-align: center;
     width: 100%;
     bottom: 15px;
-    background-color: blueviolet;
+    background-color: #990099;
     color:white;
     font-size: small;
 }
@@ -246,7 +281,7 @@ div{
     color: white;
     width: 100%;
     bottom: -15px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -255,7 +290,7 @@ div{
     color: white;
     width: 100%;
     bottom: -155px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -265,7 +300,7 @@ div{
     text-align: center;
     width: 100%;
     bottom: 15px;
-    background-color: blueviolet;
+    background-color: #990099;
     color:white;
     font-size: small;
 }
@@ -275,7 +310,7 @@ div{
     color: white;
     width: 100%;
     bottom: -15px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -284,7 +319,7 @@ div{
     color: white;
     width: 100%;
     bottom: -155px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -294,7 +329,7 @@ div{
     text-align: center;
     width: 100%;
     bottom: 15px;
-    background-color: blueviolet;
+    background-color: #990099;
     color:white;
     font-size: small;
 }
@@ -304,7 +339,7 @@ div{
     color: white;
     width: 100%;
     bottom: -15px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -313,7 +348,7 @@ div{
     color: white;
     width: 100%;
     bottom: -155px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -323,7 +358,7 @@ div{
     text-align: center;
     width: 100%;
     bottom: 15px;
-    background-color: blueviolet;
+    background-color: #990099;
     color:white;
     font-size: small;
 }
@@ -333,7 +368,7 @@ div{
     color: white;
     width: 100%;
     bottom: -15px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -342,7 +377,7 @@ div{
     color: white;
     width: 100%;
     bottom: -155px;
-    background-color: blueviolet;
+    background-color: #990099;
     font-size: small;
 }
 
@@ -350,4 +385,16 @@ div{
 .indexImages{
     width: 15px;
     height: 15px;
+}
+
+@media (min-width: 768px) {
+    .img-responsive {float: left;}
+}
+
+@media (min-width: 576px) {
+    .deeann {display: inline;}
+}
+
+h1 {
+    text-align: center;
 }
