--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -64,10 +64,10 @@ li.borderless {
     background-color: #990099;
 }
 
-.deeann {
+/* .deeann {
     font-size: xxx-large;
     text-align: center;
-}
+} */
 
 #fullstack {
     font-size: x-large;
@@ -121,25 +121,24 @@ div{
     color: white;
     left: 25px;
     }
-
-/* .center {
-    text-align: center;
-} */
+/* Make anchors align center on portfolio page */
 .anchor{
+    display: flex;
+    justify-content: center;
     text-align: center;
 }
-
+/* Image of self on index page align properly and have padding at top of image */
 .img-fix {
     padding-top: 25px;
     text-align: center;
 }
 
-.btnPortfolio {
+/* .btnPortfolio {
     background-color: white;
     color: #990099;
     font-size: x-small;
-}
-
+} */
+/* Make links look like buttons */
 .button {
     display: block;
     width: 115px;
@@ -161,10 +160,6 @@ div{
       width: 220px;
       height: 275px;
   }
-  
-/* .container .btn:hover {
-    background-color: black;
-  } */
 
   /* Setup position of first image */
 .box1{
