--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -378,8 +378,10 @@ h1, .contactInfo {
 } */
 
 /* contact icons in index page size */
-/* .indexImages{
-    width: 60px;
-    height: 60px;
-} */
+.indexImages{
+    width: 40px;
+    height: 55px;
+    padding-bottom: 15px;
+    background-color: transparent;
+}
 
